--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "connect-flash": "^0.1.1",
     "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
     "ejs-mate": "^4.0.0",
     "express": "^5.2.1",
     "flash": "^1.1.0",
