--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^5.2.1",
     "flash": "^1.1.0",
+    "joi": "^18.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^9.1.5",
     "nodemon": "^3.1.11"
